# tao_translate

./: .gitignore  README.md  crawler.py  errors.py  ex.py  frame.py  log.py  main.py  mypy.ini  pyproject.toml  requirements.txt  settings.py
tests/: test_crawler.py
translate_gui/: __init__.py  crawler.py  ex.py  frame.py  log.py  settings.py
