[tool.poetry]
name = "tao_translate"
version = "0.1.0"
description = ""
authors = ["D-zlich <2361018131@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pysimplegui = "^4.32.1"
requests = "^2.25.1"
fake-useragent = "^0.1.11"
mypy = "^0.790"
pytest = "^6.2.1"
loguru = "^0.5.3"
vulture = "^2.3"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
