[tool.poetry]
name = "tao_translate"
version = "0.1.0"
description = "a translation program"
authors = ["zlich <2361018131@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
loguru = "^0.5.3"
mypy = "^0.800"
pysimplegui = "^4.34.0"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
